# Alnwick

./: .dockerignore  .editorconfig  .gitignore  BUILD-CLI-DOCKER.md  BUILD-CLI.md  BUILD-WEB-DOCKER.md  BUILD-WEB.md  BUILD.md  Cargo.toml  Dioxus.toml  Dockerfile  INSTALL-CLI.md  INSTALL-WEB.md  README.md  docker-compose.yml  package.json
.github/workflows/: ci-cd.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: const.rs
crates/core/src/api/: mod.rs
crates/core/src/api/episode/: episode_api.rs
crates/core/src/api/episode/snapshots/: alnwick_core__api__episode__episode_api__tests___get_episode_query.snap  alnwick_core__api__episode__episode_api__tests__get_episode.snap
crates/core/src/api/index/snapshots/: alnwick_core__api__index__index_api__tests___get_podcasts_query.snap  alnwick_core__api__index__index_api__tests__get_podcasts.snap
crates/core/src/api/podcast/: mod.rs
crates/core/src/api/podcast/snapshots/: alnwick_core__api__podcast__podcast_api__tests___get_episodes_query.snap  alnwick_core__api__podcast__podcast_api__tests___get_podcast_query.snap  alnwick_core__api__podcast__podcast_api__tests__get_podcast.snap
crates/core/src/cli/: cli.rs  cli_args.rs
crates/core/src/commands/: cli_runner.rs  define.rs  mod.rs  podcast_selector.rs
crates/core/src/commands/add/: add_options.rs  add_request.rs  create_feed.rs  mod.rs
crates/core/src/commands/add/snapshots/: alnwick_core__commands__add__create_feed__tests___insert_episodes.snap  alnwick_core__commands__add__create_feed__tests___insert_podcast.snap
crates/core/src/commands/cover/: cover_cli.rs  cover_error.rs  cover_request.rs  mod.rs
crates/core/src/commands/download/: delete_existing_step.rs  download_cli.rs  download_episode_partial.rs  download_error.rs  download_file_step.rs  download_response.rs  mod.rs  save_step.rs  tag_step.rs
crates/core/src/commands/download/snapshots/: alnwick_core__commands__download__context_step__tests___get_download_episode_query.snap  alnwick_core__commands__download__context_step__tests___get_download_podcast_query.snap  alnwick_core__commands__download__context_step__tests__get_download_podcast.snap  alnwick_core__commands__download__download_handler__tests__download_handler_tags.snap  alnwick_core__commands__download__save_step__tests__update_episode_query.snap
crates/core/src/commands/emulate/: emulate_cli.rs  emulate_error.rs  emulate_handler.rs  mod.rs
crates/core/src/commands/fetch/: fetch_feed.rs  fetch_simplecast.rs  mod.rs  podcast_from_rss.rs
crates/core/src/commands/fetch/snapshots/: alnwick_core__commands__fetch__fetch_feed__tests__fetch_feed_rss.snap  (+7 more)
crates/core/src/metadata/: filter_options.rs  repository.rs
crates/core/src/metadata/migration/: m20251119_002_create_episodes_table.rs
crates/core/src/metadata/schema/: episode_kind.rs  mod.rs  slug.rs
crates/core/src/metadata/snapshots/: alnwick_core__metadata__get_all_podcast_slugs__tests___get_all_podcast_slugs_query.snap  alnwick_core__metadata__repository__tests__migrate.snap
crates/core/src/services/: http_client.rs  http_fetch.rs  http_rate_limiter.rs
crates/core/src/utils/: mod.rs  mount_provider_linux.rs  mount_provider_other.rs  resize.rs  resize_error.rs
crates/core/src/utils/tests/: mod.rs  sql_helpers.rs  tag_snapshot.rs
crates/dioxus/: Cargo.toml  package-lock.json
crates/dioxus/assets/: app.css
crates/dioxus/src/: route_info.rs
crates/dioxus/src/components/: actions.rs  field.rs  page.rs
crates/dioxus/src/contexts/: download_context.rs  mod.rs  services.rs
crates/dioxus/src/layout/: mod.rs
crates/dioxus/src/pages/: settings_page.rs
docker/cli/: .env.example  Dockerfile  docker-compose.yml
docker/dioxus/: Dockerfile  docker-compose.yml
e2e/: playwright.config.ts
e2e/tests/: add.spec.ts  podcast.spec.ts
src/: app.rs  lib.rs  main.rs  prelude.rs
src/contexts/: mod.rs
src/contexts/page/: context.rs  info.rs  mod.rs  selector.rs
src/contexts/settings/: context.rs  mod.rs
src/core/: mod.rs
src/core/cover/: cover.rs  error.rs  mod.rs
src/core/download/: download.rs  mod.rs
src/core/emulate/: emulate.rs  mod.rs
src/core/list/: error.rs  list.rs  mod.rs
src/core/schema/: episode.rs  error.rs  mod.rs  podcast.rs
src/core/scrape/: error.rs  mod.rs  scrape.rs  scrape_simplecast.rs
src/core/scrape/simplecast/: episode.rs  mod.rs  podcast.rs  shared.rs
src/core/services/: http.rs  ipinfo.rs  metadata.rs  options.rs  paths.rs  provider.rs
src/core/utils/: filter.rs  fs.rs  logging.rs  mod.rs  progress.rs  validation.rs  vec_helpers.rs
src/layout/: app.rs  head.rs  header.rs  mod.rs
src/layout/header/: component.rs
src/layout/page/: component.rs
src/pages/: mod.rs
src/pages/podcasts/: component.rs
src/pages/settings/: component.rs  mod.rs
src/pages/settings/player/: component.rs  mod.rs
src/server/: mod.rs  prelude.rs
src/server/commands/: cover_command.rs  download_command.rs  emulate_command.rs  list_command.rs  mod.rs  scrape_command.rs  scrape_simplecast_command.rs
src/server/commands/simplecast/: mod.rs  playlist.rs
src/server/services/: http.rs  metadata.rs  mod.rs  options.rs  paths.rs
src/server/utils/: mod.rs  resize.rs  tag.rs  url.rs
src/shared/: const.rs  mod.rs  prelude.rs
src/shared/errors/: cover_error.rs  database_error.rs  emulate_error.rs  http_error.rs  image_error.rs  list_error.rs  mod.rs  scrape_error.rs
src/shared/options/: download_options.rs  filter_options.rs  mod.rs  scrape_options.rs
src/shared/schema/: episode.rs  mod.rs  podcast.rs
src/shared/utils/: mod.rs
src/tests/: assertions.rs  logging.rs  mod.rs
src/web/: mod.rs  page_info.rs  page_selector.rs
src/web/components/: actions.rs  field.rs  menu.rs  mod.rs
src/web/components/field/: field_state.rs
src/web/contexts/: mod.rs  page_context.rs  settings_context.rs
src/web/layout/: actions.rs  app.rs  drawer.rs  head.rs  mod.rs
src/web/pages/: mod.rs  player_settings_page.rs  player_settings_state.rs  podcasts_page.rs  settings_page.rs
(+3 files in other folders)
